<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_demo_graph"
    app:startDestination="@id/cityListFragment">

    <fragment
        android:id="@+id/cityListFragment"
        android:name="com.egorshustov.weatherdemo.citylist.CityListFragment"
        android:label="@string/fragment_city_list_title"
        tools:layout="@layout/fragment_city_list">

        <action
            android:id="@+id/action_cityListFragment_to_addCityDialogFragment"
            app:destination="@id/addCityDialogFragment" />

        <action
            android:id="@+id/action_cityListFragment_to_cityInfoFragment"
            app:destination="@id/cityInfoFragment" />

    </fragment>

    <dialog
        android:id="@+id/addCityDialogFragment"
        android:name="com.egorshustov.weatherdemo.addcity.AddCityDialogFragment"
        android:label="@string/fragment_add_city_title"
        tools:layout="@layout/dialog_add_city" />

    <fragment
        android:id="@+id/cityInfoFragment"
        android:name="com.egorshustov.weatherdemo.cityinfo.CityInfoFragment"
        android:label="@string/fragment_city_info_title"
        tools:layout="@layout/fragment_city_info">

        <argument
            android:name="cityId"
            app:argType="long" />

    </fragment>

</navigation>