<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.egorshustov.weatherdemo.util.ExtensionsKt" />

        <variable
            name="dailyweather"
            type="com.egorshustov.weatherdemo.data.DailyWeather" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        app:cardCornerRadius="0dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@{ExtensionsKt.getDateText(dailyweather.dateTimeUnixSeconds)}"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Четверг, 01.10.2020" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/image_weather_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/description_weather_icon"
                    android:scaleType="centerCrop"
                    app:image_from_url="@{dailyweather.iconUrl}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/image_weather_icon"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_night"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@{ExtensionsKt.getTemperatureString(dailyweather.temperature.night)}"
                            android:textSize="18sp"
                            tools:text="30.0°" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/text_morning"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@{ExtensionsKt.getTemperatureString(dailyweather.temperature.morning)}"
                            android:textSize="18sp"
                            tools:text="30.0°" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_day"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@{ExtensionsKt.getTemperatureString(dailyweather.temperature.day)}"
                            android:textSize="18sp"
                            tools:text="30.0°" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/text_evening"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@{ExtensionsKt.getTemperatureString(dailyweather.temperature.evening)}"
                            android:textSize="18sp"
                            tools:text="30.0°" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_weather_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{dailyweather.description}"
                        android:textSize="18sp"
                        tools:text="Облачно, с проясненениями" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>